--- a/package.json
+++ b/package.json
@@ -27,13 +27,10 @@
     "vuepress-plugin-reading-progress": "^1.0.10",
     "vuepress-plugin-thirdparty-search": "^1.0.2",
     "vuepress-plugin-zooming": "^1.1.7",
-    "vuepress-theme-vdoing": "^1.11.1",
-    "yamljs": "^0.3.0"
-  },
-  "dependencies": {
-    "busuanzi.pure.js": "^1.0.3",
-    "vue-tabs-component": "^1.5.0",
+    "vuepress-theme-vdoing": "^1.12.3",
     "vuepress-plugin-comment": "^0.7.3",
-    "vuepress-plugin-tabs": "^0.3.0"
+    "vuepress-plugin-tabs": "^0.3.0",
+    "vue-tabs-component": "^1.5.0",
+    "yamljs": "^0.3.0"
   }
 }
